@@ -2039,3 +2039,52 @@ class CPSCustomizableWidget(CPSCompoundWidget):
     meta_type = 'Obsolete Customizable Widget'
 
 InitializeClass(CPSCustomizableWidget)
+
+##################################################
+
+class CPSBylineWidget(CPSWidget):
+    """Byline widget showing credentials and document status."""
+    meta_type = 'Byline Widget'
+
+    field_types = ('CPS String Field',)
+    field_inits = ({'is_searchabletext': 0,},)
+
+    def prepare(self, datastructure, **kw):
+        """Prepare datastructure from datamodel."""
+        datamodel = datastructure.getDataModel()
+        if len(self.fields):
+            datastructure[self.getWidgetId()] = datamodel[self.fields[0]]
+        else:
+            datastructure[self.getWidgetId()] = None
+    
+    def validate(self, datastructure, **kw):
+        """Validate datastructure and update datamodel."""
+        widget_id = self.getWidgetId()
+        err = 0
+        v = datastructure[widget_id]
+        if err:
+            datastructure.setError(widget_id, err)
+            datastructure[widget_id] = v
+        else:
+            datamodel = datastructure.getDataModel()
+            if len(self.fields):
+                datamodel[self.fields[0]] = v
+
+        return not err
+
+    def render(self, mode, datastructure, **kw):
+        """Render in mode from datastructure."""
+        datamodel = datastructure.getDataModel()
+        # get the object containing this widget
+        value = datamodel.getObject().aq_inner.aq_parent
+        render_method = 'widget_byline_render'
+        meth = getattr(self, render_method, None)
+        if meth is None:
+            raise RuntimeError("Unknown Render Method %s for widget type %s"
+                               % (render_method, self.getId()))
+        return meth(mode=mode, value=value)
+
+
+InitializeClass(CPSBylineWidget)
+
+widgetRegistry.register(CPSBylineWidget)
