@@ -1,0 +1,49 @@
+<tal:block define="mode options/mode;
+                   doc nocall:options/value;
+                   here_url here/absolute_url;
+                   utool nocall:here/portal_url;
+                   mtool here/portal_membership;
+                   isAnon mtool/isAnonymousUser;
+                  ">
+<tal:block condition="python: mode == 'view'">
+  <div style="padding:0px 0px 10px 10px;">
+  <small>
+  <tal:block condition="not:isAnon"
+    define="
+      dname python:here.portal_directories.members.getEntry(doc.Creator(), default=None);
+      cname dname/fullname|python:here.portal_membership.getFullnameFromId(doc.Creator());
+      info python:(here_url != utool.getPortalObject().absolute_url())
+      and doc.getContentInfo(doc=doc, level=2) or None;
+      email dname/email|nothing;">
+  <span i18n:translate="">
+    Created by
+    <a href="." title="Here" tal:omit-tag="not:email"
+      tal:attributes="href string:mailto:${email}?subject=[${doc/title}]; title email"
+      tal:content="cname" i18n:name="item_creator">Creator</a>.
+    Last modified
+    <tal:block content="python:here.getDateStr(doc.modification_date, 'medium')"
+      i18n:name="item_modification"/>.
+  </span>
+  <tal:block condition="info">
+    <span i18n:translate="label_status">Label Status</span>
+    <span tal:content="info/review_state" tal:attributes="class
+      info/review_state" i18n:translate="">Work</span>
+    <tal:block i18n:translate="">label_revision
+      <span tal:content="info/rev" i18n:name="status_revision">1</span>
+    </tal:block>
+    <tal:block i18n:translate="">label_language
+      <span i18n:name="status_language">
+      <tal:block i18n:translate=""
+        content="string:label_language_${info/lang}">en</tal:block>
+       </span>
+    </tal:block>
+  </tal:block>
+  </tal:block>
+  <tal:block condition="isAnon">
+    <span i18n:translate="label_last_modified">Last modified:</span>
+    <tal:block content="python:here.getDateStr(doc.modification_date, 'medium')"/>
+  </tal:block>
+  </small>
+  </div>
+</tal:block>
+</tal:block>
